feat:jms(button 수정)

--- a/index/question10.html
+++ b/index/question10.html
@@ -37,10 +37,10 @@
         <p>나는 요리할 때</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="N">
+        <button type="button" class="btn btn-outline-primary" id="N">
           요리는 손맛이지~ 계량 대충대충 하며 내 감을 믿는다.
         </button>
-        <button class="answer2" id="S">
+        <button type="button" class="btn btn-outline-primary" id="S">
           고추장 100g(저울 사용), 물 500ml(계량컵 사용) 기계가 요리하듯 모든
           양을 정확하게 잰다.
         </button>
