--- a/index/question2.html
+++ b/index/question2.html
@@ -40,10 +40,10 @@
         <p>나는 사람들을 만날 때</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="I">
+        <button type="button" class="btn btn-outline-primary" id="I">
           사람이 너무 많으면 부담스러워.. 일대일이나 소수끼리 만나는 것이 좋다!
         </button>
-        <button class="answer2" id="E">
+        <button type="button" class="btn btn-outline-primary" id="E">
           사람은 많을수록 재미있지! 다수로 만나는 것이 좋다!
         </button>
       </div>
