--- a/index/question4.html
+++ b/index/question4.html
@@ -38,10 +38,10 @@
         <p></p>
       </div>
       <div class="answer">
-        <button class="answer1" id="I">
+        <button type="button" class="btn btn-outline-primary" id="I">
           혹시라도 시킬까 조마조마하며 숨어있는다.
         </button>
-        <button class="answer2" id="E">
+        <button type="button" class="btn btn-outline-primary" id="E">
           '저요!! 제가 하고싶어요!!' 하며 왼 팔을 든다.
         </button>
       </div>
