--- a/index/question6.html
+++ b/index/question6.html
@@ -37,10 +37,10 @@
         <p>출근했는데 직장 상사가 오늘따라 까칠하다... 이 때 나의 기분은?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="N">
+        <button type="button" class="btn btn-outline-primary" id="N">
           나 어제 뭐 잘못했나..? 하루종일 조마조마해 한다.
         </button>
-        <button class="answer2" id="S">
+        <button type="button" class="btn btn-outline-primary" id="S">
           기분이 좀 안좋으신가보다~ 하고 만다.
         </button>
       </div>
