--- a/index/question1.html
+++ b/index/question1.html
@@ -39,10 +39,10 @@
         <p>갑자기 약속이 취소됐다... 이 때 나의 기분은?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="I">
+        <button type="button" class="btn btn-outline-primary" id="I">
           아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
         </button>
-        <button class="answer2" id="E">
+        <button type="button" class="btn btn-outline-primary" id="E">
           진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
         </button>
       </div>
