--- a/index/question7.html
+++ b/index/question7.html
@@ -37,11 +37,13 @@
         <p>과제가 있던 것을 까먹었다 수업은 10분 뒤 시작! 이 때 나의 기분은?</p>
       </div>
       <div class="answer">
-        <button class="answer1" id="N">
+        <button type="button" class="btn btn-outline-primary" id="N">
           나를 모두 앞에 세워 공개처형하시면 어떡하지? 내 학교생활은 끝이야..
           자퇴는 하기 싫은데.. 엄마 죄송해요..
         </button>
-        <button class="answer2" id="S">아 망했다. 좋은 점수 못받겠네..</button>
+        <button type="button" class="btn btn-outline-primary" id="S">
+          아 망했다. 좋은 점수 못받겠네..
+        </button>
       </div>
     </div>
 
