feat: 선택 크기 통일

--- a/index/question9.html
+++ b/index/question9.html
@@ -38,12 +38,7 @@
         <p>이때 당신의 기분은?</p>
       </div>
       <div class="answer">
-        <button
-          type="button"
-          class="btn btn-outline-primary"
-          id="N"
-          style="font-size: 10px"
-        >
+        <button type="button" class="btn btn-outline-primary" id="N">
           추락하면 어떡하지..? 구명조끼가 어디있더라? 아까 승무원분께서 어떻게
           하라고 하셨지? 근데 지금 바다가 아니라 땅위인데?
         </button>
