--- a/static/header.html
+++ b/static/header.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="../css/header.css" />
 
-<div class="logo" onclick="location.href='../index/index.html'">MARVEL</div>
+<div class="logo" onclick="location.href='../index/index.html'">BLUE MARVEL</div>
 <div class="inner">
   <img class="back" onclick="go_back()" src="../image/back.png" alt="뒤로가기" />
   <ul class="user">
