feat:jms (question answer 줄 바꿈)

--- a/index/question2.html
+++ b/index/question2.html
@@ -41,10 +41,11 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
-          사람이 너무 많으면 부담스러워.. 일대일이나 소수끼리 만나는 것이 좋다!
+          사람이 너무 많으면 부담스러워.. <br />일대일이나 소수끼리 만나는 것이
+          좋다!
         </button>
         <button type="button" class="btn btn-outline-primary" id="E">
-          사람은 많을수록 재미있지! 다수로 만나는 것이 좋다!
+          사람은 많을수록 재미있지! <br />다수로 만나는 것이 좋다!
         </button>
       </div>
     </div>
