--- a/index/question3.html
+++ b/index/question3.html
@@ -41,10 +41,10 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
-          많은 사람과 연락하는 것이 힘들어.. 좁고 깊게!
+          많은 사람과 연락하는 것이 힘들어.. <br />좁고 깊게!
         </button>
         <button type="button" class="btn btn-outline-primary" id="E">
-          새로운 사람 만나는 것이 너무 즐거워! 넓고 얕게!
+          새로운 사람 만나는 것이 너무 즐거워! <br />넓고 얕게!
         </button>
       </div>
     </div>
