--- a/index/question5.html
+++ b/index/question5.html
@@ -42,10 +42,10 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
-          말 실수하면 안돼.. 차분하고 신중하게 말을 선택한다.
+          말 실수하면 안돼.. <br />차분하고 신중하게 말을 선택한다.
         </button>
         <button type="button" class="btn btn-outline-primary" id="E">
-          말하는 것이 너무 즐거워! 적극적으로 참여하며 활발하게 말한다.
+          말하는 것이 너무 즐거워! <br />적극적으로 참여하며 활발하게 말한다.
         </button>
       </div>
     </div>
