--- a/index/question6.html
+++ b/index/question6.html
@@ -38,7 +38,8 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
-          나 어제 뭐 잘못했나..? 하루종일 조마조마해 한다.
+          나 어제 뭐 잘못했나..?<br />
+          하루종일 조마조마해 한다.
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
           기분이 좀 안좋으신가보다~ 하고 만다.
