--- a/index/question7.html
+++ b/index/question7.html
@@ -38,8 +38,8 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
-          나를 모두 앞에 세워 공개처형하시면 어떡하지? 내 학교생활은 끝이야..
-          자퇴는 하기 싫은데.. 엄마 죄송해요..
+          나를 앞에 세워 공개처형하시면 어떡하지? <br />내 학교생활은 끝이야..
+          자퇴는 하기 싫은데.. <br />엄마 죄송해요..
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
           아 망했다. 좋은 점수 못받겠네..
