--- a/index/question8.html
+++ b/index/question8.html
@@ -35,17 +35,16 @@
       <div class="question">
         <img src="/image/question8_img.jpg" class="question_img" alt="" />
         <p>
-          당신의 차고 앞에 어떤 차가 주차해놓아 입구가 막혔다! 차주가 전화도
-          받지 않는다..
+          당신의 차고 앞을 어떤 차가 막아놨다! 차주가 전화도 받지 않는다..
+          <br />이 때 당신의 기분은?
         </p>
-        <p>이 때 당신의 기분은?</p>
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
-          저 차를 부숴버릴 대포가 내 차에 있었으면 좋겠다..라고 생각한다.
+          저 차를 부숴버릴 대포가 <br />내 차에 있었으면 좋겠다..라고 생각한다.
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
-          아오...개념없는 사람이네..하고 다른 자리를 찾아본다.
+          아오...개념없는 사람이네..하고 <br />다른 자리를 찾아본다.
         </button>
       </div>
     </div>
