--- a/index/question9.html
+++ b/index/question9.html
@@ -40,10 +40,10 @@
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
           추락하면 어떡하지..? 구명조끼가 어디있더라? 아까 승무원분께서 어떻게
-          하라고 하셨지? 근데 지금 바다가 아니라 땅위인데?
+          하라고 하셨지? <br />근데 지금 바다 위가 아니라 땅위인데?
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
-          아 비행기가 흔들리는구나. 에잉 음료수 엎었네.
+          아 비행기가 흔들리는구나. <br />에잉 음료수 엎었네.
         </button>
       </div>
     </div>
