--- a/index/question1.html
+++ b/index/question1.html
@@ -40,10 +40,10 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
-          아쉽다..다음에 보자..라고 하지만 속으로는 좋아한다
+          아쉽다..다음에 보자..라고 하지만 <br />속으로는 좋아한다
         </button>
         <button type="button" class="btn btn-outline-primary" id="E">
-          진짜 아쉬워서 다른 친구와의 약속을 새로 잡는다!
+          진짜 아쉬워서 <br />다른 친구와의 약속을 새로 잡는다!
         </button>
       </div>
     </div>
