--- a/index/question10.html
+++ b/index/question10.html
@@ -38,11 +38,11 @@
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
-          요리는 손맛이지~ 계량 대충대충 하며 내 감을 믿는다.
+          요리는 손맛이지~ <br />계량은 대충대충 하며 내 감을 믿는다.
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
-          고추장 100g(저울 사용), 물 500ml(계량컵 사용) 기계가 요리하듯 모든
-          양을 정확하게 잰다.
+          고추장 100g, 물 500ml 계량기를 사용해 <br />기계가 요리하듯 모든 양을
+          정확하게 잰다.
         </button>
       </div>
     </div>
