finish 반응형으로 글자 크기 및 동영상 크기 동일

--- a/index/finish.html
+++ b/index/finish.html
@@ -32,24 +32,24 @@
             <img class="img" />
           </div>
           <div class="resultContent">
-            <div id="heroName" style="font-size: 40px">히어로 이름</div>
-            <div id="resultMBTI" style="font-size: 25px">mbti 결과</div>
-            <div id="explain" style="font-size: 25px">설명</div>
+            <div id="heroName">히어로 이름</div>
+            <div id="resultMBTI">mbti 결과</div>
+            <div id="explain">설명</div>
             <br /><br />
             <div class="match">
               <div>
-                <div style="font-size: 30px">최고의 궁합</div>
-                <div id="bestMatch" style="font-size: 20px"></div>
+                <div id="best">최고의 궁합</div>
+                <div id="bestMatch"></div>
                 <img class="bestMatchImg" onclick="onClick('bestMatchImg')" />
               </div>
               <div>
-                <div style="font-size: 30px">노력이 필요한 궁합</div>
-                <div id="worstMatch" style="font-size: 20px"></div>
+                <div id="worst">노력이 필요한 궁합</div>
+                <div id="worstMatch"></div>
                 <img class="worstMatchImg" onclick="onClick('worstMatchImg')" />
               </div>
             </div>
             <br />
-            <div>
+            <div id="endExplain">
               <div>궁합의 MBTI가 궁금하면</div>
               <div>이미지를 클릭해보세요.</div>
             </div>
