feat:jms(question 반응형)

--- a/index/question1.html
+++ b/index/question1.html
@@ -36,7 +36,9 @@
       <!-- * 질문 -->
       <div class="question">
         <img src="/image/question1_img.jpg" class="question_img" alt="" />
-        <p>갑자기 약속이 취소됐다... 이 때 나의 기분은?</p>
+        <div class="question_main">
+          갑자기 약속이 취소됐다... <br />이 때 나의 기분은?
+        </div>
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
