--- a/index/question11.html
+++ b/index/question11.html
@@ -34,8 +34,13 @@
     </div>
     <div id="wrap">
       <div class="question">
-        <img src="/image/question11_img.jpg" class="question_img" alt="" />
-        <p>친구가 스트레스 받는다고 술 마시자고 한다. 이때 나의 대답은?</p>
+        <img
+          src="/image/question11_img.jpg"
+          class="question_img"
+          id="img11"
+          alt=""
+        />
+        친구가 스트레스 받는다고 술 마시자고 한다. 이때 나의 대답은?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="T">
