--- a/index/question13.html
+++ b/index/question13.html
@@ -34,7 +34,7 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question13_img.jpg" class="question_img" alt="" />
-        <p>고민상담을 해줄 때 나는...</p>
+        고민상담을 해줄 때 나는...
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="T">
