--- a/index/question14.html
+++ b/index/question14.html
@@ -40,7 +40,7 @@
           alt=""
           style="height: 40vh"
         />
-        <p>슬픔을 나누면...?</p>
+        슬픔을 나누면...?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="T">
