--- a/index/question15.html
+++ b/index/question15.html
@@ -40,7 +40,7 @@
           alt=""
           style="height: 30vh"
         />
-        <p>문제를 해결할 때 나는</p>
+        문제를 해결할 때 나는
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="T">
