--- a/index/question16.html
+++ b/index/question16.html
@@ -39,7 +39,7 @@
           alt=""
           style="width: 10vw"
         />
-        <p>자신의 카톡 알림 상태는...?</p>
+        자신의 카톡 알림 상태는...?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="J">
