--- a/index/question19.html
+++ b/index/question19.html
@@ -39,7 +39,7 @@
           alt=""
           style="width: 15vw"
         />
-        <p>시험이 일주일 남은 나는...</p>
+        시험이 일주일 남은 나는...
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="J">
