--- a/index/question20.html
+++ b/index/question20.html
@@ -34,7 +34,7 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question20_img.jpg" class="question_img" alt="" />
-        <p>연인과 이별을 한 후</p>
+        연인과 이별을 한 후
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="J">
