--- a/index/question3.html
+++ b/index/question3.html
@@ -37,7 +37,7 @@
       <!-- * 질문 -->
       <div class="question">
         <img src="/image/question3_img.jpg" class="question_img" alt="" />
-        <p>나의 친구관계는</p>
+        나의 친구관계는
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
