--- a/index/question4.html
+++ b/index/question4.html
@@ -34,7 +34,7 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question4_img.jpg" class="question_img" alt="" />
-        <p>선생님(교수님)께서 발표할 사람을 찾으신다! 나는 이 때</p>
+        선생님(교수님)께서 발표할 사람을 찾으신다! <br />나는 이 때
         <p></p>
       </div>
       <div class="answer">
