--- a/index/question5.html
+++ b/index/question5.html
@@ -38,7 +38,7 @@
           class="question_img"
           alt="question5"
         />
-        <p>사람들과 대화할 때 나는</p>
+        사람들과 대화할 때 나는
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
