--- a/index/question6.html
+++ b/index/question6.html
@@ -34,7 +34,9 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question6_img.jpg" class="question_img" alt="" />
-        <p>출근했는데 직장 상사가 오늘따라 까칠하다... 이 때 나의 기분은?</p>
+
+        출근했는데 직장 상사가 오늘따라 까칠하다... <br />
+        이 때 나의 기분은?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
