--- a/index/question7.html
+++ b/index/question7.html
@@ -33,13 +33,18 @@
     </div>
     <div id="wrap">
       <div class="question">
-        <img src="/image/question7_img.jpg" class="question_img" alt="" />
-        <p>과제가 있던 것을 까먹었다 수업은 10분 뒤 시작! 이 때 나의 기분은?</p>
+        <img
+          src="/image/question7_img.jpg"
+          class="question_img"
+          alt=""
+          style="width: 250px"
+        />
+
+        과제가 있던 것을 까먹었다 수업은 10분 뒤 시작! <br />이 때 나의 기분은?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
-          나를 앞에 세워 공개처형하시면 어떡하지? <br />내 학교생활은 끝이야..
-          자퇴는 하기 싫은데.. <br />엄마 죄송해요..
+          교수님한테 찍혀 자퇴하는 상상까지 한다
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
           아 망했다. 좋은 점수 못받겠네..
