--- a/index/question8.html
+++ b/index/question8.html
@@ -34,10 +34,9 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question8_img.jpg" class="question_img" alt="" />
-        <p>
-          당신의 차고 앞을 어떤 차가 막아놨다! 차주가 전화도 받지 않는다..
-          <br />이 때 당신의 기분은?
-        </p>
+
+        당신의 차고 앞을 어떤 차가 막아놨다! <br />
+        차주가 전화도 받지 않는다.. 이 때 당신의 기분은?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
