--- a/index/question9.html
+++ b/index/question9.html
@@ -34,16 +34,14 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question9_img.jpg" class="question_img" alt="" />
-        <p>비행기를 탔는데 갑자기 비행기가 흔들린다!</p>
-        <p>이때 당신의 기분은?</p>
+        비행기를 탔는데 갑자기 비행기가 흔들린다! 이때 당신의 기분은?
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
-          추락하면 어떡하지..? 구명조끼가 어디있더라? 아까 승무원분께서 어떻게
-          하라고 하셨지? <br />근데 지금 바다 위가 아니라 땅위인데?
+          비행기가 추락하면 어떡하지? 하며 <br />구명조끼 위치를 확인한다.
         </button>
         <button type="button" class="btn btn-outline-primary" id="S">
-          아 비행기가 흔들리는구나. <br />에잉 음료수 엎었네.
+          아 비행기가 흔들리는구나.
         </button>
       </div>
     </div>
