--- a/index/question10.html
+++ b/index/question10.html
@@ -34,7 +34,7 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question10_img.jpg" class="question_img" alt="" />
-        <p>나는 요리할 때</p>
+        나는 요리할 때
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="N">
