--- a/index/question17.html
+++ b/index/question17.html
@@ -34,7 +34,7 @@
     <div id="wrap">
       <div class="question">
         <img src="/image/question17_img.jpg" class="question_img" alt="" />
-        <p>월급을 받은 당신..!</p>
+        월급을 받은 당신..!
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="J">
