--- a/index/question18.html
+++ b/index/question18.html
@@ -39,7 +39,7 @@
           alt=""
           style="width: 20vw"
         />
-        <p>친구들을 집에 초대하는 나는...</p>
+        친구들을 집에 초대하는 나는...
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="J">
