--- a/index/question2.html
+++ b/index/question2.html
@@ -37,7 +37,7 @@
       <!-- * 질문 -->
       <div class="question">
         <img src="/image/question2_img.jpg" class="question_img" alt="" />
-        <p>나는 사람들을 만날 때</p>
+        나는 사람들을 만날 때
       </div>
       <div class="answer">
         <button type="button" class="btn btn-outline-primary" id="I">
