--- a/index/finish.html
+++ b/index/finish.html
@@ -23,7 +23,7 @@
       <header id="header"></header>
       <div class="fullscreen-video">
         <!--뒷 배경 영상 출력-->
-        <video muted autoplay loop id="bgVideo" class="bgVideo">
+        <video muted playsinline autoplay loop id="bgVideo" class="bgVideo">
           <strong>해당 브라우저에서는 영상이 제공되지 않습니다.</strong>
         </video>
         <div id="resultContainer">
