--- a/index/question20.html
+++ b/index/question20.html
@@ -61,7 +61,7 @@
         my_key = $(this).attr("id");
         console.log(my_key);
         localStorage.setItem("answer20", my_key);
-        $(location).attr("href", "finish.html");
+        $(location).attr("href", "load.html");
       });
     </script>
   </body>
