--- a/static/header.html
+++ b/static/header.html
@@ -16,9 +16,9 @@
 
   <div class="dropdown_contain">
     <button class="dropdown">
-      <img class="list" src="../image/list.svg" alt="list">
+      <img class="list" src="../image/list.svg">
     </button>
-    <ul class="m_user">
+    <ul class="m_user" id="dp-content">
       <li>LOG IN</li>
       <li>SIGN UP</li>
     </ul>
