feat:jms(finish logo 추가)

--- a/index/finish.html
+++ b/index/finish.html
@@ -60,6 +60,12 @@
             </div>
           </div>
         </div>
+        <div class="img_box">
+          <img class="SNS" src="../image/kakao.jpg" alt="" />
+          <img class="SNS" src="../image/facebook.jpg" alt="" />
+          <img class="SNS" src="../image/instagram.jpg" alt="" />
+          <img class="SNS" src="../image/naver.jpg" alt="" />
+        </div>
       </div>
       <footer id="footer"></footer>
     </div>
