feat:jms(progress bar 숫자 추가)

--- a/index/finish.html
+++ b/index/finish.html
@@ -60,6 +60,7 @@
             </div>
           </div>
         </div>
+        <div style="text-align: center">공유하기</div>
         <div class="img_box">
           <img class="SNS" src="../image/kakao.jpg" alt="" />
           <img class="SNS" src="../image/facebook.jpg" alt="" />
