--- a/index/question15.html
+++ b/index/question15.html
@@ -29,7 +29,9 @@
         class="progress-bar progress-bar-striped progress-bar-animated"
         id="bar"
         role="progressbar"
-      ></div>
+      >
+        15/20
+      </div>
     </div>
 
     <div id="wrap">
