--- a/index/question11.html
+++ b/index/question11.html
@@ -30,7 +30,9 @@
         class="progress-bar progress-bar-striped progress-bar-animated"
         id="bar"
         role="progressbar"
-      ></div>
+      >
+        11/20
+      </div>
     </div>
     <div id="wrap">
       <div class="question">
