--- a/index/question16.html
+++ b/index/question16.html
@@ -16,7 +16,9 @@
       src="https://code.jquery.com/jquery-3.7.0.js"
       integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
       crossorigin="anonymous"
-    ></script>
+    >
+      16/20
+    </script>
     <!-- header & footer 고정 -->
     <script src="../js/static.js"></script>
     <title>마블 성격 유형 테스트</title>
@@ -29,7 +31,9 @@
         class="progress-bar progress-bar-striped progress-bar-animated"
         id="bar"
         role="progressbar"
-      ></div>
+      >
+        16/20
+      </div>
     </div>
     <div id="wrap">
       <div class="question">
