--- a/index/question2.html
+++ b/index/question2.html
@@ -30,7 +30,9 @@
         class="progress-bar progress-bar-striped progress-bar-animated"
         id="bar"
         role="progressbar"
-      ></div>
+      >
+        2/20
+      </div>
     </div>
 
     <div id="wrap">
