--- a/index/question7.html
+++ b/index/question7.html
@@ -29,7 +29,9 @@
         class="progress-bar progress-bar-striped progress-bar-animated"
         id="bar"
         role="progressbar"
-      ></div>
+      >
+        7/20
+      </div>
     </div>
     <div id="wrap">
       <div class="question">
