feat:jms(login 연결)

--- a/static/header.html
+++ b/static/header.html
@@ -20,7 +20,7 @@
     alt="뒤로가기"
   />
   <ul class="user">
-    <li>LOG IN</li>
+    <li onclick="location.href = '../index/login.html' ">LOG IN</li>
     <li>SIGN UP</li>
   </ul>
 
