--- a/index/login.html
+++ b/index/login.html
@@ -1,51 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="/css/login.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- bootstrap 이용 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
-    />
-    <!-- jQuery 이용 -->
-    <script
-      src="https://code.jquery.com/jquery-3.7.0.js"
-      integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
-      crossorigin="anonymous"
-    ></script>
-    <!-- header & footer 고정 -->
-    <script src="../js/static.js"></script>
-    <title>LOG IN</title>
-  </head>
 
-  <body>
-    <header id="header"></header>
-    <div class="container">
-      <div class="login-wrapper">
-        <h2>Login</h2>
-        <form id="login-form">
-          <input type="text" name="userName" placeholder="Email" />
-          <input type="password" name="userPassword" placeholder="Password" />
-          <label for="remember-check">
-            <input type="checkbox" id="remember-check" />아이디 저장하기
-          </label>
-          <input
-            type="button"
-            onclick="location.href='../index.html'"
-            value="Login"
-          />
-          <img src="../image/kakao.jpg" alt="" />
-          <img src="../image/facebook.jpg" alt="" />
-          <img src="../image/instagram.jpg" alt="" />
-          <img src="../image/naver.jpg" alt="" />
-        </form>
-      </div>
+<head>
+  <link rel="stylesheet" href="/css/login.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- bootstrap 이용 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+  <!-- jQuery 이용 -->
+  <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM="
+    crossorigin="anonymous"></script>
+  <!-- header & footer 고정 -->
+  <script src="../js/static.js"></script>
+  <!-- NAVER LOGIN -->
+  <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
+  <title>LOG IN</title>
+</head>
+
+<body>
+  <header id="header"></header>
+  <div class="container">
+    <div class="login-wrapper">
+      <h2>Login</h2>
+      <form id="login-form">
+        <input type="text" name="userName" placeholder="Email" />
+        <input type="password" name="userPassword" placeholder="Password" />
+        <label for="remember-check">
+          <input type="checkbox" id="remember-check" />아이디 저장하기
+        </label>
+        <input type="button" onclick="location.href='../index.html'" value="Login" />
+        <img src="../image/kakao.jpg" alt="" />
+        <img src="../image/facebook.jpg" alt="" />
+        <img src="../image/instagram.jpg" alt="" />
+        <!-- TODO -->
+        <a id="naverIdLogin_loginButton" href="javascript:void(0)"><img src="../image/naver.jpg" alt="" /></a>
+      </form>
     </div>
+  </div>
 
-    <footer id="footer"></footer>
-  </body>
+  <footer id="footer"></footer>
+
+  <!-- NAVER SCRIPT -->
+  <script>
+    var naverLogin = new naver.LoginWithNaverId({
+      clientId: "9CgA0OnHi45OJ0cGVaOU", //내 애플리케이션 정보에 cliendId를 입력해줍니다.
+      callbackUrl: "https://marveltest1.netlify.app/index.html", // 내 애플리케이션 API설정의 Callback URL 을 입력해줍니다.
+      isPopup: false,
+      callbackHandle: true
+    }
+    );
+
+    naverLogin.init();
+
+    window.addEventListener('load', function () {
+      naverLogin.getLoginStatus(function (status) {
+        if (status) {
+          var email = naverLogin.user.getEmail(); // 필수로 설정할것을 받아와 아래처럼 조건문을 줍니다.
+
+          console.log(naverLogin.user);
+
+          if (email == undefined || email == null) {
+            alert("이메일은 필수정보입니다. 정보제공을 동의해주세요.");
+            naverLogin.reprompt();
+            return;
+          }
+        } else {
+          console.log("callback 처리에 실패하였습니다.");
+        }
+      });
+    });
+
+  </script>
+</body>
+
 </html>
