feat:jms(all_char추가)

--- a/static/header.html
+++ b/static/header.html
@@ -21,7 +21,7 @@
   />
   <ul class="user">
     <li onclick="location.href = '../index/login.html' ">LOG IN</li>
-    <li>SIGN UP</li>
+    <li onclick="location.href = '../index/all_char.html' ">CHARACTER</li>
   </ul>
 
   <div class="dropdown_contain">
@@ -30,7 +30,7 @@
     </button>
     <ul class="m_user" id="dp-content">
       <li onclick="location.href = '../index/login.html' ">LOG IN</li>
-      <li>SIGN UP</li>
+      <li onclick="location.href = '../index/all_char.html' ">CHARACTER</li>
     </ul>
   </div>
 </div>
