--- a/static/header.html
+++ b/static/header.html
@@ -1,27 +1,26 @@
 <link rel="stylesheet" href="../css/header.css" />
-<link
-  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-  rel="stylesheet"
-  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-  crossorigin="anonymous"
-/>
-<script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-  crossorigin="anonymous"
-></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+<script>
+  function locate(url) {
+    var answer;
+    // 페이지 이동 전 confirm 이용해 확인
+    // 확인 선택 시 answer에 true, 취소면 false
+    answer = confirm("캐릭터 모아보기 페이지로 이동");
+    // 확인 선택 후, 자바스크립트 호출할 때 같이 넘어온 url로 페이지 이동
+    if (answer == true) location = url;
+  }
+</script>
 
 <div class="logo" onclick="location.href='../index.html'">BLUE MARVEL</div>
 <div class="inner">
-  <img
-    class="back"
-    onclick="go_back()"
-    src="../image/back.png"
-    alt="뒤로가기"
-  />
+  <img class="back" onclick="go_back()" src="../image/back.png" alt="뒤로가기" />
   <ul class="user">
     <li onclick="location.href = '../index/login.html' ">LOG IN</li>
-    <li>SIGN UP</li>
+    <li><a href="javascript:locate('../index/login.html')" style="text-decoration: none; color
+      :black">?</a></li>
   </ul>
 
   <div class="dropdown_contain">
@@ -29,8 +28,9 @@
       <img class="list" src="../image/list.svg" />
     </button>
     <ul class="m_user" id="dp-content">
-      <li onclick="location.href = '../index/login.html' ">LOG IN</li>
-      <li>SIGN UP</li>
+      <li onclick="location.href = '../index/login.html'">LOG IN</li>
+      <li><a href="javascript:locate('../index/login.html')" style="text-decoration: none; color
+        :black">?</a></li>
     </ul>
   </div>
 </div>
