feat:jms(all_char 반응형 수정 이미지 크기 증가)

--- a/index/all_char.html
+++ b/index/all_char.html
@@ -22,28 +22,44 @@
     <header id="header"></header>
     <div class="container">
       <div class="line">
-        <img id="hulk" src="../image/Hulk.jpg" alt="" />
-        <img id="dr_strange" src="../image/dr_strange.jpg" alt="" />
-        <img id="thanos" src="../image/Thanos.jpg" alt="" />
-        <img id="iron_man" src="../image/IronMan.jpg" alt="" />
+        <div class="box">
+          <img id="hulk" src="../image/Hulk.jpg" alt="" />
+          <img id="dr_strange" src="../image/dr_strange.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img id="thanos" src="../image/Thanos.jpg" alt="" />
+          <img id="iron_man" src="../image/IronMan.jpg" alt="" />
+        </div>
       </div>
       <div class="line">
-        <img id="vision" src="../image/Vision.jpg" alt="" />
-        <img id="witch" src="../image/ScarletWitch.jpg" alt="" />
-        <img id="roki" src="../image/Roki.jpg" alt="" />
-        <img id="spider_man" src="../image/SpiderMan.jpg" alt="" />
+        <div class="box">
+          <img id="vision" src="../image/Vision.jpg" alt="" />
+          <img id="witch" src="../image/ScarletWitch.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img id="roki" src="../image/Roki.jpg" alt="" />
+          <img id="spider_man" src="../image/SpiderMan.jpg" alt="" />
+        </div>
       </div>
       <div class="line">
-        <img id="hawk_eye" src="../image/HawkEye.png" alt="" />
-        <img id="cpt_america" src="../image/CaptainAmerica.jpg" alt="" />
-        <img id="cpt_marvel" src="../image/CaptainMarvel.jpg" alt="" />
-        <img id="ant_man" src="../image/AntMan.jpg" alt="" />
+        <div class="box">
+          <img id="hawk_eye" src="../image/HawkEye.png" alt="" />
+          <img id="cpt_america" src="../image/CaptainAmerica.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img id="cpt_marvel" src="../image/CaptainMarvel.jpg" alt="" />
+          <img id="ant_man" src="../image/AntMan.jpg" alt="" />
+        </div>
       </div>
       <div class="line">
-        <img id="black_widow" src="../image/BlackWidow.jpg" alt="" />
-        <img id="black_panther" src="../image/BlackPanther.jpg" alt="" />
-        <img id="star_lord" src="../image/StarLord.jpg" alt="" />
-        <img id="thor" src="../image/thor.jpg" alt="" />
+        <div class="box">
+          <img id="black_widow" src="../image/BlackWidow.jpg" alt="" />
+          <img id="black_panther" src="../image/BlackPanther.jpg" alt="" />
+        </div>
+        <div class="box">
+          <img id="star_lord" src="../image/StarLord.jpg" alt="" />
+          <img id="thor" src="../image/thor.jpg" alt="" />
+        </div>
       </div>
     </div>
     <footer id="footer"></footer>
