feat:jms(all_char_result.html 추가)

--- a/index/all_char.html
+++ b/index/all_char.html
@@ -69,7 +69,7 @@
     $("img").click(function () {
       let _id = $(this).attr("id");
       sessionStorage.setItem("charValue", _id);
-      window.location.href = "finish.html";
+      window.location.href = "all_char_result.html";
       console.log(_id);
     });
   </script>
