feat:jms(login-logout 분리)

--- a/static/header_logout.html
+++ b/static/header_logout.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="../css/header.css" />
+<link rel="stylesheet" href="../css/header_logout.css" />
 <script>
   const profileImageValue = localStorage.getItem("profileImage");
   console.log("gkgk", profileImageValue);
@@ -20,7 +20,6 @@
     alt="뒤로가기"
   />
   <ul class="user">
-    <img src="/image/profileImage.jpg" alt="" id="profile_Image" />
     <li onclick="location.href = '../index/login.html' ">LOG IN</li>
     <li onclick="location.href = '../index/all_char.html' ">CHARACTER</li>
   </ul>
