--- a/index/login.html
+++ b/index/login.html
@@ -78,7 +78,7 @@
           alert("로그인을 먼저 하세요.");
           return;
         }
-        Kakao.Auth.logout(function () {
+        Kakao.Auth.logout(function (response) {
           alert("로그아웃" + Kakao.Auth.getAccessToken());
         });
       }
