--- a/static/header_login.html
+++ b/static/header_login.html
@@ -16,14 +16,9 @@
     const KaApiKey = KAKAO_API_KEY;
     //2. 카카오 초기화
     Kakao.init(KaApiKey);
-    const accessToken = Kakao.Auth.getAccessToken();
-    if (!accessToken) {
-      console.log("nono");
-      return;
-    }
     Kakao.Auth.logout(function (response) {
       localStorage.clear();
-      location.reload();
+      location.href = "../index.html";
       console.log("yes");
     });
   }
